--- a/roles/installer/templates/domain.xml.j2
+++ b/roles/installer/templates/domain.xml.j2
@@ -19,6 +19,7 @@
   <on_crash>destroy</on_crash>
   <devices>
     <emulator>/usr/libexec/qemu-kvm</emulator>
+    {% if domain_iso is defined %}
     <disk type='file' device='cdrom'>
       <driver name='qemu' type='raw'/>
       <source file='{{ domain_iso }}'/>
@@ -26,6 +27,7 @@
       <readonly/>
       <address type='drive' controller='0' bus='0' target='0' unit='0'/>
     </disk>
+    {% endif %}
     <disk type='file' device='disk'>
       <driver name='qemu' type='qcow2' cache='unsafe'/>
       <source file='{{ domain_disk }}'/>
