Fix typo in template

--- a/roles/installer/templates/dnsmasq.conf.j2
+++ b/roles/installer/templates/dnsmasq.conf.j2
@@ -2,6 +2,6 @@ local=/{{ cluster }}.{{ domain }}/
 server=/{{ cluster }}.{{ domain }}/{{ groups['router_vm'][0] }}
 address=/.apps.{{ cluster }}.{{ domain }}/{{ groups['router_vm'][0] }}
 address=/api.{{ cluster }}.{{ domain }}/{{ groups['router_vm'][0] }}
-address=/api-int.{{ cluster }}.{{ domain }}/{{ groups['router_vm'][0] }
+address=/api-int.{{ cluster }}.{{ domain }}/{{ groups['router_vm'][0] }}
 address=/registry.{{ cluster }}.{{ domain }}/{{ hypervisor_vip }}
 
