Add filter to allow 6443 port between networks

--- a/roles/installer/templates/domain.xml.j2
+++ b/roles/installer/templates/domain.xml.j2
@@ -39,6 +39,7 @@
       <source network='{{ domain_network }}'/>
       <guest dev='eth0'/>
       <model type='virtio'/>
+      <filterref filter='allow-api'/>
     </interface>
     <serial type='pty'>
       <target type='isa-serial' port='0'>
