Open port 443 in vms

--- a/roles/installer/templates/nwfilter_api.xml.j2
+++ b/roles/installer/templates/nwfilter_api.xml.j2
@@ -1,5 +1,6 @@
 <filter name='allow-api-{{ cluster }}' chain='ipv4' >
   <rule action='accept' direction='in'>
     <tcp  dstportstart='6443'/>
+    <tcp  dstportstart='443'/>
   </rule>
 </filter>
